<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.0.3</version>
    <relativePath></relativePath>
  </parent>

  <groupId>com.fortytwotalents</groupId>
  <artifactId>foto-gallery-qrcode-generator</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>foto-gallery-qrcode-generator</name>
  <description>Generates a PDF with QR codes for photo gallery access codes</description>

  <properties>
    <commons-csv.version>1.14.1</commons-csv.version>
    <jacoco.version>0.8.14</jacoco.version>
    <java.version>25</java.version>
    <pdfbox.version>3.0.7</pdfbox.version>
    <rewrite-maven-plugin.version>6.32.0</rewrite-maven-plugin.version>
    <sortpom-maven-plugin.version>4.0.0</sortpom-maven-plugin.version>
    <spring-javaformat-maven-plugin.version>0.0.47</spring-javaformat-maven-plugin.version>
    <taikai.version>1.60.0</taikai.version>
    <twelvemonkeys.version>3.13.1</twelvemonkeys.version>
    <zxing.version>3.5.4</zxing.version>
  </properties>

  <dependencies>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <dependency>
      <groupId>com.google.zxing</groupId>
      <artifactId>core</artifactId>
      <version>${zxing.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.zxing</groupId>
      <artifactId>javase</artifactId>
      <version>${zxing.version}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.pdfbox</groupId>
      <artifactId>pdfbox</artifactId>
      <version>${pdfbox.version}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-csv</artifactId>
      <version>${commons-csv.version}</version>
    </dependency>

    <dependency>
      <groupId>tools.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
    </dependency>

    <dependency>
      <groupId>com.twelvemonkeys.imageio</groupId>
      <artifactId>imageio-webp</artifactId>
      <version>${twelvemonkeys.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.enofex</groupId>
      <artifactId>taikai</artifactId>
      <version>${taikai.version}</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-configuration-processor</artifactId>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>@{argLine} --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <goals>
              <goal>report</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>code-cleanup</id>
      <properties>
        <cyclonedx.skip>true</cyclonedx.skip>
        <maven.gitcommitid.skip>true</maven.gitcommitid.skip>
      </properties>
      <build>
        <plugins>
          <!-- Step 1: Apply Spring Java Format -->
          <plugin>
            <groupId>io.spring.javaformat</groupId>
            <artifactId>spring-javaformat-maven-plugin</artifactId>
            <version>${spring-javaformat-maven-plugin.version}</version>
            <executions>
              <execution>
                <id>spring-format</id>
                <goals>
                  <goal>apply</goal>
                </goals>
                <phase>validate</phase>
              </execution>
            </executions>
          </plugin>
          <!-- Step 2: Sort pom.xml -->
          <plugin>
            <groupId>com.github.ekryd.sortpom</groupId>
            <artifactId>sortpom-maven-plugin</artifactId>
            <version>${sortpom-maven-plugin.version}</version>
            <configuration>
              <predefinedSortOrder>custom_1</predefinedSortOrder>
              <createBackupFile>false</createBackupFile>
              <sortProperties>true</sortProperties>
            </configuration>
            <executions>
              <execution>
                <id>sort-pom</id>
                <goals>
                  <goal>sort</goal>
                </goals>
                <phase>validate</phase>
              </execution>
            </executions>
          </plugin>
          <!-- Step 3: OpenRewrite recipes -->
          <plugin>
            <groupId>org.openrewrite.maven</groupId>
            <artifactId>rewrite-maven-plugin</artifactId>
            <version>${rewrite-maven-plugin.version}</version>
            <configuration>
              <activeRecipes>
                <recipe>org.openrewrite.staticanalysis.CodeCleanup</recipe>
                <recipe>org.openrewrite.java.logging.slf4j.Slf4jBestPractices</recipe>
                <recipe>org.openrewrite.java.testing.junit5.JUnit5BestPractices</recipe>
                <recipe>org.openrewrite.java.testing.mockito.MockitoBestPractices</recipe>
                <recipe>org.openrewrite.java.RemoveUnusedImports</recipe>
                <recipe>org.openrewrite.java.OrderImports</recipe>
                <recipe>io.moderne.java.spring.boot4.UpgradeSpringBoot_4_0</recipe>
              </activeRecipes>
              <recipeArtifactCoordinates>org.openrewrite.recipe:rewrite-static-analysis:LATEST,org.openrewrite.recipe:rewrite-logging-frameworks:LATEST,org.openrewrite.recipe:rewrite-testing-frameworks:LATEST,io.moderne.recipe:rewrite-spring:LATEST</recipeArtifactCoordinates>
              <exportDatatables>true</exportDatatables>
            </configuration>
            <executions>
              <execution>
                <id>rewrite</id>
                <goals>
                  <goal>run</goal>
                </goals>
                <phase>validate</phase>
              </execution>
            </executions>
          </plugin>
          <!-- Steps 4 & 5: Update parent and dependency versions -->
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>versions-maven-plugin</artifactId>
            <configuration>
              <allowSnapshots>false</allowSnapshots>
              <generateBackupPoms>false</generateBackupPoms>
              <allowMajorUpdates>true</allowMajorUpdates>
              <allowMinorUpdates>true</allowMinorUpdates>
              <allowIncrementalUpdates>true</allowIncrementalUpdates>
              <rulesUri>file://${project.basedir}/version-rules.xml</rulesUri>
            </configuration>
            <executions>
              <execution>
                <id>update-parent</id>
                <goals>
                  <goal>update-parent</goal>
                </goals>
                <phase>validate</phase>
              </execution>
              <execution>
                <id>update-properties</id>
                <goals>
                  <goal>update-properties</goal>
                </goals>
                <phase>validate</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>native</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <configuration>
              <buildArgs>
                <buildArg>--initialize-at-run-time=java.awt,javax.imageio,sun.awt,sun.font,sun.java2d</buildArg>
                <buildArg>-H:+AddAllCharsets</buildArg>
              </buildArgs>
              <metadataRepository>
                <enabled>true</enabled>
              </metadataRepository>
            </configuration>
            <executions>
              <execution>
                <id>build-native</id>
                <goals>
                  <goal>compile-no-fork</goal>
                </goals>
                <phase>package</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
